# Luminous

./: .gitignore  .gitmodules  README.md
Luminous/: AppDelegate.h  AppDelegate.m  CMakeLists.txt  GameViewController.h  GameViewController.m  Info.plist  Renderer.h  Renderer.m  ShaderTypes.h  Shaders.metal  main.m
Luminous.xcodeproj/: project.pbxproj
Luminous.xcodeproj/xcuserdata/zero.xcuserdatad/xcschemes/: xcschememanagement.plist
Luminous/Base.lproj/: Main.storyboard
Luminous/src/: CMakeLists.txt  main.cpp
Luminous/src/apps/: CMakeLists.txt
Luminous/src/apps/luminous/: CMakeLists.txt  main.cpp
Luminous/src/backends/: CMakeLists.txt
Luminous/src/backends/cpu/: cpu_device.cpp
Luminous/src/backends/cuda/: cuda_device.cpp
Luminous/src/backends/metal/: CMakeLists.txt  metal_acceleration.h  metal_acceleration.mm  metal_buffer.h  metal_buffer.mm  metal_codegen.h  metal_codegen.mm  metal_device.mm  metal_dispatcher.h  metal_host_cache.h  metal_host_cache.mm  metal_kernel.h  metal_kernel.mm  metal_texture.h  metal_texture.mm
Luminous/src/compute/: CMakeLists.txt  acceleration.h  buffer.h  codegen.cpp  codegen.h  device.cpp  device.h  dispatcher.h  dsl.h  dsl_syntax.h  expression.h  function.cpp  function.h  hit.h  kernel.h  pipeline.h  primitive.h  ray.h  statement.h  texture.cpp  texture.h  type_desc.h  variable.cpp  variable.h
Luminous/src/core/: CObject.h  concepts.h  context.cpp  context.h  header.h  logging.h  platform.h  plugin.h  sha1.cpp  string_util.h
Luminous/src/core/math/: math_util.h  matrix_types.h  vector_types.h
Luminous/src/core/samplers/: Sampler.cpp  Sampler.h  sampler.cpp
Luminous/src/ext/nlohmann/: json.hpp
Luminous/src/ext/stblib/: stblib.cpp
Luminous/src/ext/stblib/stb/: stb_truetype.h
Luminous/src/kernel/: CObject.h
Luminous/src/math/: data_types.h  math_util.h  matrix_types.h  scalar_types.h  vector_types.h
Luminous/src/parser/: scene_parser.cpp  scene_parser.h
Luminous/src/render/: CMakeLists.txt  param_set.h  plugin.h
Luminous/src/render/cameras/: CMakeLists.txt  pinhole.cpp
Luminous/src/render/films/: CMakeLists.txt  rgb_film.cpp
Luminous/src/render/filters/: CMakeLists.txt  box.cpp  gaussian.cpp  mitchell.cpp  sinc.cpp  triangle.cpp
Luminous/src/render/include/: CMakeLists.txt  camera.h  film.h  filter.cpp  filter.h  interaction.h  light.h  material.cpp  material.h  mipmap.h  model.cpp  model.h  param_set.cpp  param_set.h  rasterizer.h  sampler.h  sampling.h  scene.cpp  scene.h  scene_parser.cpp  scene_parser.h  shape.h  task.h  texture.h  transform.h
Luminous/src/render/integrators/: ao.cpp
Luminous/src/render/lights/: CMakeLists.txt  diffuse.cpp
Luminous/src/render/models/: CMakeLists.txt  model_instance.cpp
Luminous/src/render/rasterizers/: CMakeLists.txt  cpu_rasterizer.cpp
Luminous/src/render/samplers/: CMakeLists.txt  independent.cpp
Luminous/src/render/shapes/: CMakeLists.txt  instance.cpp  model_instance.cpp  tri_mesh.cpp
Luminous/src/render/textures/: CMakeLists.txt  bitmap.cpp  constant_texture.cpp
Luminous/src/render/transforms/: CMakeLists.txt  linear_trs_animation.cpp  trs.cpp  trs.h
Luminous/src/tests/: CMakeLists.txt  cpp_code_gen.cpp  metal_kernel_test.cpp  test_buffer_io.cpp  test_model_load.cpp  test_parallel.cpp  test_texture_io.cpp  test_transform.cpp
Luminous/src/tools/: header.h
Luminous/src/util/: CMakeLists.txt  array.h  concepts.h  header.h  logging.h  macro.h  memory.cpp  memory.h  model_cache.cpp  model_cache.h  parallel.cpp  parallel.h  param_set.cpp  param_set.h  scene_parser.h  sha1.h  string_print.h
Luminous/tests/: test_cpp_code_gen.cpp
learn_cmake/: CMakeLists.txt  tutorial.cpp
reference/: laine2013hpg_slides.ppt
